[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "WarpCrypto"
version = "2.0.1"
description = "Fast and Portable Cryptography Extension Library (Rust)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Riajul" }]
license = "LGPL-3.0-or-later"
license-files = ["COPYING", "COPYING.lesser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "crypto", "cryptography", "encryption", "mtproto",
    "rust", "extension", "library", "aes", "warpcrypto",
]

[project.urls]
Homepage = "https://github.com/rjriajul/WarpCrypto"
Source = "https://github.com/rjriajul/WarpCrypto"
Tracker = "https://github.com/rjriajul/WarpCrypto/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
# Build universal2 on macOS for ARM+Intel single wheel
universal2 = true
strip = true

